--- a/package.json
+++ b/package.json
@@ -34,20 +34,17 @@
     "url": "https://github.com/openedx/frontend-template-application/issues"
   },
   "dependencies": {
-    "@edx/brand": "npm:@edx/brand-openedx@1.2.0",
-    "@edx/frontend-component-footer": "12.0.0",
-    "@edx/frontend-component-header": "4.0.0",
-    "@edx/frontend-platform": "^4.0.0",
-    "@edx/paragon": "^20.32.2",
-    "@fortawesome/fontawesome-svg-core": "6.3.0",
-    "@fortawesome/free-brands-svg-icons": "6.3.0",
-    "@fortawesome/free-regular-svg-icons": "6.3.0",
-    "@fortawesome/free-solid-svg-icons": "6.3.0",
+    "@edx/frontend-platform": "4.6.0",
+    "@edx/paragon": "20.45.0",
+    "@fortawesome/fontawesome-svg-core": "6.4.0",
+    "@fortawesome/free-brands-svg-icons": "6.4.0",
+    "@fortawesome/free-regular-svg-icons": "6.4.0",
+    "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "core-js": "3.27.2",
+    "core-js": "3.30.0",
     "prop-types": "15.8.1",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-redux": "7.2.9",
     "react-router": "5.3.4",
     "react-router-dom": "^5.3.4",
@@ -55,11 +52,11 @@
     "regenerator-runtime": "0.13.11"
   },
   "devDependencies": {
-    "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-build": "^12.4.19",
-    "glob": "7.2.3",
+    "@edx/browserslist-config": "^1.2.0",
+    "@edx/frontend-build": "12.8.61",
+    "glob": "8.1.0",
     "husky": "8.0.3",
-    "jest": "29.5.0",
+    "jest": "29.6.1",
     "reactifex": "1.1.1"
   }
 }
