--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
 trigger_job:
   trigger:
     project: abstract-germany/community-theme/community-theme-tutor
-    branch: community-theme.palm
+    branch: main
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
       when: never
-    - if: '$CI_COMMIT_BRANCH == "development"'
+    - if: '$CI_COMMIT_BRANCH == "community-theme.palm"'
       when: always
