--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "@fortawesome/free-regular-svg-icons": "6.4.0",
     "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "animate.css": "^4.1.1",
     "core-js": "3.30.0",
     "prop-types": "15.8.1",
     "react": "^16.14.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^16.14.0",
     "react-redux": "7.2.9",
     "react-router": "5.3.4",
