--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "@edx/frontend-app-course-about",
   "private": true,
   "version": "0.1.0",
-  "description": "PROVIDE DESCRIPTION",
+  "description": "MFE to handle course about",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/openedx/frontend-template-application.git"
+    "url": "git+https://github.com/gymnasium/frontend-app-course-about.git"
   },
   "browserslist": [
     "extends @edx/browserslist-config"
@@ -26,12 +26,12 @@
   },
   "author": "edX",
   "license": "AGPL-3.0",
-  "homepage": "https://github.com/openedx/frontend-template-application#readme",
+  "homepage": "https://github.com/gymnasium/frontend-app-course-about#readme",
   "publishConfig": {
     "access": "public"
   },
   "bugs": {
-    "url": "https://github.com/openedx/frontend-template-application/issues"
+    "url": "https://github.com/gymnasium/frontend-app-course-about/issues"
   },
   "dependencies": {
     "@edx/frontend-platform": "4.6.0",
@@ -41,15 +41,14 @@
     "@fortawesome/free-regular-svg-icons": "6.4.0",
     "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "animate.css": "^4.1.1",
     "core-js": "3.30.0",
     "prop-types": "15.8.1",
-    "react": "^16.14.0",
-    "react-animation-on-scroll": "^5.1.0",
-    "react-dom": "^16.14.0",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-helmet": "6.1.0",
     "react-redux": "7.2.9",
     "react-router": "5.3.4",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "5.3.4",
     "redux": "4.2.1",
     "regenerator-runtime": "0.13.11"
   },
