--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "core-js": "3.30.0",
+    "dompurify": "3.0.6",
     "prop-types": "15.8.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
