--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@edx/frontend-app-course-about",
   "private": true,
-  "version": "0.1.0",
+  "version": "1.0.0-gym.palm.4",
   "description": "MFE to handle course about",
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "url": "https://github.com/gymnasium/frontend-app-course-about/issues"
   },
   "dependencies": {
+    "@edx/frontend-component-header": "github:gymnasium/frontend-component-header#gym.palm.4",
     "@edx/frontend-platform": "4.6.0",
     "@edx/paragon": "20.45.0",
     "@fortawesome/fontawesome-svg-core": "6.4.0",
