--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@edx/browserslist-config": "^1.2.0",
     "@edx/frontend-build": "12.9.17",
+    "copy-webpack-plugin": "^11.0.0",
     "glob": "8.1.0",
     "husky": "8.0.3",
     "jest": "29.6.1",
