--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@edx/frontend-app-course-about",
-  "private": true,
   "version": "1.0.0-gym.palm.4",
   "description": "MFE to handle course about",
   "repository": {
@@ -15,14 +14,8 @@
     "i18n_extract": "BABEL_ENV=i18n fedx-scripts babel src --quiet > /dev/null",
     "lint": "fedx-scripts eslint --ext .js --ext .jsx .",
     "lint:fix": "fedx-scripts eslint --fix --ext .js --ext .jsx .",
-    "snapshot": "fedx-scripts jest --updateSnapshot",
-    "start": "fedx-scripts webpack-dev-server --progress",
-    "test": "fedx-scripts jest --coverage --passWithNoTests"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
+    "prepare": "npm run build",
+    "start": "fedx-scripts webpack-dev-server --progress"
   },
   "author": "edX",
   "license": "AGPL-3.0",
@@ -57,11 +50,10 @@
   },
   "devDependencies": {
     "@edx/browserslist-config": "1.2.0",
-    "@edx/frontend-build": "npm:@openedx/frontend-build@13.0.24",
+    "@edx/frontend-build": "12.8.61",
     "copy-webpack-plugin": "^11.0.0",
     "glob": "8.1.0",
     "husky": "8.0.3",
-    "jest": "29.6.1",
     "reactifex": "1.1.1"
   }
 }
