--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edx/frontend-app-course-about",
-  "version": "1.0.0-gym.palm.4",
+  "version": "1.0.0-gym.quince.1",
   "description": "MFE to handle course about",
   "repository": {
     "type": "git",
