--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "core-js": "3.30.0",
     "dompurify": "3.0.6",
+    "gym-frontend-components": "github:gymnasium/gym-frontend-components#gym.quince.1",
     "prop-types": "15.8.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
