(finally) working again

--- a/.env
+++ b/.env
@@ -19,4 +19,4 @@ SEGMENT_KEY=''
 SITE_NAME=''
 USER_INFO_COOKIE_NAME=''
 APP_ID=''
-MFE_CONFIG_API_URL=''
+MFE_CONFIG_API_URL='http://local.edly.io:8000/api/mfe_config/v1'
