--- a/.env.development
+++ b/.env.development
@@ -1,24 +1,24 @@
 NODE_ENV='development'
 PORT=3000
 ACCESS_TOKEN_COOKIE_NAME='edx-jwt-cookie-header-payload'
-BASE_URL='http://localhost:3000'
+BASE_URL='http://apps.local.edly.io:3000'
 CREDENTIALS_BASE_URL='http://localhost:18150'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
 ECOMMERCE_BASE_URL='http://localhost:18130'
 LANGUAGE_PREFERENCE_COOKIE_NAME='openedx-language-preference'
-LEARNING_BASE_URL='http://local.overhang.io:2000'
-LMS_BASE_URL='http://local.overhang.io:8000'
-LOGIN_URL='http://local.overhang.io:8000/login'
-LOGOUT_URL='http://local.overhang.io:8000/logout'
+LEARNING_BASE_URL='http://apps.local.edly.io:2000'
+LMS_BASE_URL='http://local.edly.io:8000'
+LOGIN_URL='http://local.edly.io:1999/login'
+LOGOUT_URL='http://local.edly.io:8000/logout'
 LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
 LOGO_TRADEMARK_URL=https://edx-cdn.org/v3/default/logo-trademark.svg
 LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
 FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
-MARKETING_SITE_BASE_URL='http://local.overhang.io'
+MARKETING_SITE_BASE_URL='http://edly.io'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
-REFRESH_ACCESS_TOKEN_ENDPOINT='http://localhost:18000/login_refresh'
+REFRESH_ACCESS_TOKEN_ENDPOINT='http://local.edly.io:8000/login_refresh'
 SEGMENT_KEY=''
 SITE_NAME=Gymnasium
 USER_INFO_COOKIE_NAME='edx-user-info'
 APP_ID=''
-MFE_CONFIG_API_URL=''
+MFE_CONFIG_API_URL='http://local.edly.io:8000/api/mfe_config/v1'
