--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "core-js": "3.30.0",
     "dompurify": "3.0.6",
-    "gym-frontend-components": "github:gymnasium/gym-frontend-components#gym.quince.1",
+    "@edx/gym-frontend": "github:gymnasium/gym-frontend-components#gym.quince.1",
     "prop-types": "15.8.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
@@ -44,12 +44,11 @@
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
     "redux": "4.2.1",
-    "regenerator-runtime": "0.13.11"
+    "regenerator-runtime": "0.14.0"
   },
   "devDependencies": {
     "@edx/browserslist-config": "1.2.0",
-    "@edx/frontend-build": "12.8.61",
-    "copy-webpack-plugin": "^11.0.0",
+    "@edx/frontend-build": "13.0.1",
     "glob": "8.1.0",
     "husky": "8.0.3",
     "reactifex": "1.1.1"
