--- a/.env.test
+++ b/.env.test
@@ -16,6 +16,7 @@ ORDER_HISTORY_URL='http://localhost:1996/orders'
 REFRESH_ACCESS_TOKEN_ENDPOINT='http://local.edly.io:8000/login_refresh'
 SEGMENT_KEY=''
 SITE_NAME='Gymnasium Local'
+STUDIO_BASE_URL=' http://studio.local.edly.io:8001'
 USER_INFO_COOKIE_NAME='edx-user-info'
 APP_ID=''
 MFE_CONFIG_API_URL='http://local.edly.io:8000/api/mfe_config/v1'
