add env variable

--- a/.env.local
+++ b/.env.local
@@ -22,3 +22,4 @@ STUDIO_BASE_URL=' http://studio.local.edly.io'
 USER_INFO_COOKIE_NAME='edx-user-info'
 APP_ID=''
 MFE_CONFIG_API_URL='http://local.edly.io/api/mfe_config/v1'
+SECURE_COOKIES='false'
