revert SECURE_COOKIES

--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,7 @@ CREDENTIALS_BASE_URL='http://localhost:18150'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
 ECOMMERCE_BASE_URL='http://localhost:18130'
 LANGUAGE_PREFERENCE_COOKIE_NAME='openedx-language-preference'
-LEARNING_BASE_URL='http://apps.local.edly.io'
+LEARNING_BASE_URL='http://apps.local.edly.io/learning'
 LMS_BASE_URL='http://local.edly.io'
 LOGIN_URL='http://local.edly.io/login'
 LOGOUT_URL='http://local.edly.io/logout'
@@ -22,4 +22,3 @@ STUDIO_BASE_URL=' http://studio.local.edly.io'
 USER_INFO_COOKIE_NAME='edx-user-info'
 APP_ID=''
 MFE_CONFIG_API_URL='http://local.edly.io/api/mfe_config/v1'
-SECURE_COOKIES='false'
