--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@edx/frontend-platform": "4.6.0",
+    "@edx/gym-frontend": "git+https://git@github.com/gymnasium/gym-frontend-components.git#gym.quince.2",
     "@edx/paragon": "20.46.3",
     "@fortawesome/fontawesome-svg-core": "6.4.0",
     "@fortawesome/free-brands-svg-icons": "6.4.0",
@@ -35,7 +36,6 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "core-js": "3.30.0",
     "dompurify": "3.0.6",
-    "@edx/gym-frontend": "github:gymnasium/gym-frontend-components#gym.quince.1",
     "prop-types": "15.8.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
