--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edx/frontend-app-course-about",
-  "version": "1.0.4-gym.quince.1",
+  "version": "1.0.5-gym.quince.3",
   "description": "MFE to handle course about",
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@edx/frontend-platform": "4.6.0",
-    "@edx/gym-frontend": "git+https://git@github.com/gymnasium/gym-frontend-components.git#gym.quince.2",
+    "@edx/gym-frontend": "git+https://git@github.com/gymnasium/gym-frontend-components.git#main",
     "@edx/paragon": "20.46.3",
     "@fortawesome/fontawesome-svg-core": "6.4.0",
     "@fortawesome/free-brands-svg-icons": "6.4.0",
@@ -35,7 +35,7 @@
     "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "core-js": "3.30.0",
-    "dompurify": "3.0.6",
+    "dompurify": "^3.1.0",
     "prop-types": "15.8.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
