--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@edx/frontend-app-course-about",
-  "version": "1.0.6-gym.quince.3",
-  "description": "MFE to handle course about",
+  "version": "1.0.7-gym.quince.3",
+  "description": "Gymnasium-specific MFE to handle course about",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gymnasium/frontend-app-course-about.git"
