fix bad URLs, add CSS trick for FOUT, update version

--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,7 @@ CREDENTIALS_BASE_URL='http://localhost:18150'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
 ECOMMERCE_BASE_URL='http://localhost:18130'
 LANGUAGE_PREFERENCE_COOKIE_NAME='openedx-language-preference'
-LEARNING_BASE_URL='http://apps.local.edly.io/learning'
+LEARNING_BASE_URL='http://apps.local.edly.io'
 LMS_BASE_URL='http://local.edly.io'
 LOGIN_URL='http://local.edly.io/login'
 LOGOUT_URL='http://local.edly.io/logout'
