update packages (again), minor BrowserRouter rewrite

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edx/frontend-app-course-about",
-  "version": "1.0.9-gym.quince.3",
+  "version": "1.0.10-gym.quince.3",
   "description": "Gymnasium-specific MFE to handle course about",
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
   },
   "author": "edX",
   "license": "AGPL-3.0",
-  "homepage": "https://github.com/gymnasium/frontend-app-course-about#readme",
+  "homepage": ".",
   "publishConfig": {
     "access": "public"
   },
@@ -26,26 +26,30 @@
     "url": "https://github.com/gymnasium/frontend-app-course-about/issues"
   },
   "dependencies": {
-    "@edx/frontend-platform": "8.0.1",
+    "@edx/frontend-platform": "7.1.4",
     "@edx/gym-frontend": "git+https://git@github.com/gymnasium/gym-frontend-components.git#main",
-    "@edx/paragon": "npm:@openedx/paragon@^21.5.6",
-    "core-js": "3.33.0",
+    "@edx/paragon": "npm:@openedx/paragon@^22.0.0",
+    "core-js": "3.37.0",
     "dompurify": "^3.1.0",
     "prop-types": "15.8.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "6.1.0",
-    "react-redux": "^8.1.1",
+    "react-redux": "^7.2.9",
     "react-router": "6.23.0",
     "react-router-dom": "6.23.0",
-    "redux": "^4.0.4",
-    "regenerator-runtime": "0.14.0"
+    "redux": "^4.2.1",
+    "regenerator-runtime": "0.14.1"
   },
   "devDependencies": {
     "@edx/browserslist-config": "1.2.0",
     "@edx/frontend-build": "npm:@openedx/frontend-build@^14.0.3",
     "glob": "8.1.0",
     "husky": "8.0.3",
-    "reactifex": "1.1.1"
+    "@edx/reactifex": "^2.1.1"
+  },
+  "overrides": {
+    "axios": "^1.6.8",
+    "axios-mock-adapter": "^1.22.0"
   }
 }
