update packages, resolve errors

--- a/.env.development
+++ b/.env.development
@@ -16,6 +16,7 @@ LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
 FAVICON_URL=http://edly.io:8888/favicon.svg
 MARKETING_SITE_BASE_URL='http://edly.io:8888'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
+OPENEDX_ATLAS_PULL='false'
 REFRESH_ACCESS_TOKEN_ENDPOINT='http://local.edly.io:8000/login_refresh'
 SEGMENT_KEY=''
 SITE_NAME='Gymnasium Local'
