--- a/package.json
+++ b/package.json
@@ -26,24 +26,24 @@
     "url": "https://github.com/gymnasium/frontend-app-course-about/issues"
   },
   "dependencies": {
-    "@edx/frontend-platform": "7.1.4",
+    "@edx/frontend-platform": "^8.0.0",
     "@edx/gym-frontend": "git+https://git@github.com/gymnasium/gym-frontend-components.git#main",
-    "@edx/paragon": "npm:@openedx/paragon@^22.0.0",
-    "core-js": "3.37.0",
+    "@openedx/paragon": "^22.0.0",
+    "core-js": "3.37.1",
     "dompurify": "^3.1.0",
     "prop-types": "15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "6.1.0",
     "react-redux": "^7.2.9",
-    "react-router": "6.23.0",
-    "react-router-dom": "6.23.0",
+    "react-router": "6.25.1",
+    "react-router-dom": "6.25.1",
     "redux": "^4.2.1",
     "regenerator-runtime": "0.14.1"
   },
   "devDependencies": {
     "@edx/browserslist-config": "1.2.0",
-    "@edx/frontend-build": "npm:@openedx/frontend-build@^14.0.3",
+    "@openedx/frontend-build": "14.0.14",
     "glob": "8.1.0",
     "husky": "8.0.3",
     "@edx/reactifex": "^2.1.1"
